fixed issue with vertical scrollbars

--- a/app/angular/src/app/app.component.css
+++ b/app/angular/src/app/app.component.css
@@ -52,6 +52,13 @@ nav{
   margin-left: 10em;
 }
 
+.topnav{
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 .nav-button {
   background: #c2185b;
   border-radius: 6px;
