--- a/app/angular/src/styles.css
+++ b/app/angular/src/styles.css
@@ -3,6 +3,8 @@
 html,
 body {
   height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 
 body {
